--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-flask
-tensorflow
+Flask==2.2.5
+Werkzeug==2.2.3
 pandas
 scikit-learn
 opencv-python-headless
-mediapipe
 gunicorn
 numpy
-werkzeug
+Pillow
